--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+   .btn-default {
+      @apply flex gap-2 items-center px-4 py-1;
+      @apply font-logo text-logo-black;
+      @apply border-2 rounded-md;
+      @apply hover:text-logo-white hover:bg-logo-orange;
+   }
 }
